busybox.yml
apiVersion: v1
kind: Pod
metadata:
 name: busybox
spec:
 containers:
 - name: myapp-container
   image: radial/busyboxplus:curl
   command: ['sh', '-c', 'while true; do sleep 3600; done']
