candy-service-pod.yml
apiVersion: v1
kind: Pod 
metadata:
 name: candy-service-pod
 labels: 
  name: candy-app
spec:
 serviceAccountName: candy
 securityContext:      
  fsGroup: 2000 
 containers:
  - name: candy-service-container
    image: linuxacademycontent/candy-service:1
    volumeMounts: 
     - name: config-volume
       mountPath: /etc/candy-service
    resources:
     requests:
      memory: "64Mi"
      cpu: "250m"
     limits:
      memory: "128Mi"
      cpu: "500m"
 volumes:
  - name: config-volume
    configMap:
       name:  candy-service-config
