liveness-probe.yml
apiVersion: v1
kind: Pod
metadata:
 name: liveness-pod
spec:
 containers:
 - name: busybox-container
   image: busybox
   command: ['sh','-c', "echo Hello Bomma! && sleep 3600"]
   livenessProbe:
    exec:
     command:
     - echo
     - testing
    initialDelaySeconds: 20
    periodSeconds: 5
