my-command.yml
apiVersion: v1
kind: Pod 
metadata: 
 name: command-pod
 labels:
   app: cmdapp
spec:
 containers:
 - name: cmdapp-container
   image: busybox
   command: ['echo']
 restartPolicy: Never
