my-pv-pod.yml
apiVersion: v1
kind: Pod
metadata:
 name: my-pv-pod
spec:
 containers:
 - name: busybox
   image: busybox
   command: ["sh", "-c", "echo Hello Bomma!!!!  && sleep 3600"]
   volumeMounts:
   - name: my-storage
     mountPath: "/mnt/storage"
 volumes:
 - name: my-storage
   persistentVolumeClaim:
    claimName: my-pvc
