my-resource-pod.yml
apiVersion: v1
kind: Pod
metadata:
 name: resource-request-pod
 labels:
  name: resource-app
spec:
 containers:
 - name: resource-request-container
   image: busybox
   command: ['sh', '-c',"echo Hello Bomma && sleep 3600"]
   resources:
    requests:
     memory: "64Mi"
     cpu: "260m"
    limits:
     memory: "128Mi"
     cpu: "500m"
