my-serviceaccount-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-secret-pod
spec:
  serviceAccount: my-service-account
  containers:
  - name: myapp-container
    image: busybox
    command: ['sh', '-c', "echo Hello, Kubernetes! && sleep 3600"]
