myapp.yml
apiVersion: v1
kind: Pod
metadata:
 name: mypod
 labels:
  app: myapp-22
spec:
 containers:
  - name: myapp-container
    image: busybox
    command: ['sh','-c','echo Hello BOMMA! && sleep 4000' ]
