network-policy-secure.yml
apiVersion: v1
kind: Pod
metadata:
 name: network-policy-secure-pod
 labels:
  app: secure-app
spec:
 containers:
 - name: nginx
   image: nginx
   ports:
   - containerPort: 80
