persistentvolumeclaim-pod.yml
apiVersion: v1
kind: Pod
metadata:
 name: mysql-pod
spec:
 containers:
 - name: my-sql-container
   image: mysql:5.6
   ports:
   - containerPort: 3306
   volumeMounts:
   - name: mysql-storage
     mountPath: /var/lib/mysql
 volumes:
 - name: mysql-storage
   persistentVolumeClaim:
    claimName: mysql-pv-claim
