pizza-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: pizza-deployment
 namespace: pizza
 labels:
  app: pizza
spec:
 replicas: 3
 selector:
  matchLabels:
   app: pizza
 template:
  metadata:
   labels:
    app: pizza
  spec:
   containers:
   - name: pizza
     image: linuxacademycontent/pizza-service:1.14.6
     command: ["nginx"]
     args: ["-g", "daemon off;"]
     ports:
     - containerPort: 80
     livenessProbe:
      httpGet:
       path: /healthz
       port: 8081
     readinessProbe:
      httpGet:
       path: /
       port: 80
