production-label.yml
apiVersion: v1
kind: Pod
metadata:
 name: production-level-pod
 labels:
  app: my-app
  environment: production
spec:
 containers:
 - name: nginx-container
   image: nginx
