readiness-probe.yml
apiVersion: v1
kind: Pod
metadata:
 name: readiness-pod
spec:
 containers:
 - name: nginx-container
   image: nginx
   readinessProbe:
    httpGet:
     path: /
     port: 80
    initialDelaySeconds: 20
    periodSeconds: 5
