pizza-service.yml
apiVersion: v1
kind: Service
metadata:
 name: pizza-service
 namespace: pizza
spec:
 type: NodePort
 selector:
   app: pizza
 ports:
 - protocol: TCP
   port: 80
   nodePort: 30080
