network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: network-policy
spec:
 podSelector:
  matchLabels:
   app: secure-app
 policyTypes:  
 - Ingress
 - Egress
 ingress:
 - from:
   - podSelector: 
      matchLabels:
       allow-access: "true"
   ports:
   - protocol: TCP
     port: 80
 egress:
 - to:
   - podSelector:
      matchLabels:
       allow-access: "true"
   ports:
   - protocol: TCP
     port: 80
